--- a/Trilha 2/style.css
+++ b/Trilha 2/style.css
@@ -1,85 +1,5 @@
 /* Reset CSS baseado no "Reset CSS" de Eric Meyer */
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,a,img,center,ul,li,fieldset,form,label,legend,table,caption,aside,details,embed,figure,figcaption,footer,header,menu,nav,section,audio,video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -104,18 +24,6 @@ a:hover,
 a:focus {
   text-decoration: underline;
 }
-/* Definir estilos padrão para tabelas */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-caption,
-th,
-td {
-  text-align: left;
-  font-weight: normal;
-  vertical-align: middle;
-}
 
 /* Cabeçalho */
 header {
@@ -132,12 +40,13 @@ header {
 
 nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  height: 150px;
-  max-width: 1200px;
+  gap: 100px;
+  height: 200px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 0 30px;
+  padding: 0 20px;
 }
 
 .logo img {
@@ -146,12 +55,16 @@ nav {
 
 .menu {
   display: flex;
+  flex-direction: row;
   margin: 0;
   padding: 0;
 }
 
 .menu li {
+  display: flex;
   margin-left: 30px;
+  flex-direction: column;
+  align-items: center;
 }
 
 .menu a {
@@ -343,7 +256,7 @@ h2 {
   margin-bottom: 30px;
 }
 
-.studio-description{
+.artist-description{
   width: 50%;
 }
 
@@ -352,7 +265,7 @@ h2 {
   padding: 1%;
   padding-bottom: 3%;
   background-color: #000000;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='24' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%23343541' fill-opacity='0.78'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='24' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%23343541' fill-opacity='0.4'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   text-align: center;
 }
 
@@ -367,13 +280,13 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
 
 .contact-form {
-  margin-bottom: 20px;
+  margin-bottom: 80px;
 }
 
 .contact-form label {
   display: block;
-  margin-bottom: 10px;
-  font-size: 18px;
+  margin-bottom: 20px;
+  font-size: 22px;
   font-weight: bold;
   color: #fff;
   font-family: "Nunito Sans", sans-serif;
@@ -397,6 +310,13 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   font-size: 16px;
   border-radius: 5px;
   cursor: pointer;
+}
+
+#contact p{
+font-size: 22px;
+font-weight: bold;
+color: #df71ff;
+font-family: "Nunito Sans", sans-serif;
 }
 
 .contact-whats {
