--- a/Trilha 2/TabelaPeriodica/styles.css
+++ b/Trilha 2/TabelaPeriodica/styles.css
@@ -1,14 +1,18 @@
+/* Reset CSS */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+  
 .tabela-periodica {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     width: 100%;
     margin: 0 auto;
-    border-collapse: collapse;
-    font-family: Arial, sans-serif;
-    font-size: 14px;
+  
 }
-
 
 .row {
 	display: flex;
@@ -21,43 +25,43 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    width: calc(100% / 18);
-    height: 50px;
-    border: 1px solid #aaa;
+    width: calc(98vw/18);
+    height: 75px;
+    border: 1px solid #000;
     background-color: #fff;
     text-align: center;
     font-weight: bold;
 }
 
-.elemento:hover {
-	background-color: #ccc;
-}
-
-.elemento span {
-	display: block;
-	position: absolute;
-}
-
 .numero {
 	top: 5px;
 	left: 50px;
-	font-size: 16px;
+	font-size: 14px;
+    font-family: Calibri;
 }
 
 .simbolo {
-	font-size: 20px;
+	font-size: 24px;
+    font-family: Georgia;
 }
 
 .nome {
 	bottom: 5px;
 	left: 5px;
-	font-size: 12px;
+	font-size: 10px;
+    font-family: Georgia;
+}
+
+.empty{
+    width: calc(98vw/18);
+    height: 75px;
 }
 
 .massa {
 	bottom: 5px;
 	right: 100px;
-	font-size: 8px;
+	font-size: 10px;
+    font-family: Calibri;
 }
 
 /* não-metais*/
@@ -71,12 +75,12 @@
 /* semi-metais*/
 .boro, .silicio, .germanio, .arsenio, .antimonio, .telurio, .polonio{ background-color: #b8ff91; }
 /* outros metais*/
-.alumínio, .galio, .indio, .estanho, .talio, .chumnbo, .bismuto { background-color: #fff991; }
+.aluminio, .galio, .indio, .estanho, .talio, .chumbo, .bismuto { background-color: #fff991; }
 /* metais de transição*/
-.escandio, .titanio, .vanadio, .cromio, .manganes, .ferro, .cobalto, .niquel, .cobre, .zinco,
+.escandio, .titanio, .vanadio, .cromo, .manganes, .ferro, .cobalto, .niquel, .cobre, .zinco,
 .itrio, .zirconio, .niobio, .molibdenio, .tecnecio, .rutenio, .rodio, .paladio, .prata, .cadmio,
 .lutecio, .hafnio, .tantalo, .tungstenio, .renio, .osmio, .iridio, .platina, .ouro, .mercurio,
-.laurencio, .rutherfordio, .dubnio, .seaborgio, .bohrio, .seaborgio, .hassio, .meitnerio, .e110, .e111, .e112 { background-color: #ecff91; }
+.laurencio, .rutherfordio, .dubnio, .seaborgio, .bohrio, .seaborgio, .hassio, .meitnerio, .darmstadtio, .roentgenio, .copernicio { background-color: #ecff91; }
 /* lantanideos*/
 .lantanio, .cerio, .praseodimio, .neodimio, .promecio, .samario, .europio, .gadolinio, .terbio, .disprosio, .holmio, .erbio, .tulio, .iterbio { background-color: #d2ff91; }
 /* actinideos*/
@@ -84,4 +88,4 @@
 /* halogênios*/
 .fluor, .cloro, .bromo, .iodo, .astato { background-color: #f991ff; }
 /* sem propriedades*/
-.e113, .e114, .e115, .e116, .e117, .e118 { background-color: #c8c8c8; }
+.nihonio, .flerovio, .moscovio, .livermorio, .tennesso, .oganessonio { background-color: #c8c8c8; }
