--- a/Trilha 2/PowerInk/style.css
+++ b/Trilha 2/PowerInk/style.css
@@ -25,9 +25,18 @@ a:focus {
   text-decoration: underline;
 }
 
+/* Variáveis das cores */
+:root {
+  --preto: #000;
+  --rosa: #da85b7;
+  --rosa_claro: #ffb0e1;
+  --lilas: #b73fda;
+  --branco: #fff;
+}
+
 /* Cabeçalho */
 header {
-  background-image: linear-gradient(to bottom, #000 66%, #34354112);
+  background-image: linear-gradient(to bottom, var(--preto) 66%, #34354112);
   width: 100%;
 }
 
@@ -69,7 +78,7 @@ nav {
 
 .menu a {
   display: block;
-  color: #df71ff;
+  color: var(--rosa);
   text-decoration: none;
   font-size: 1.5em;
   font-weight: 500;
@@ -78,7 +87,7 @@ nav {
 }
 
 .menu a:hover {
-  color: #fff;
+  color: var(--branco);
 }
 
 /* Página Inicial */
@@ -97,7 +106,7 @@ nav {
 .home-content h1 {
   font-size: 7em;
   margin-bottom: 20px;
-  color: #df71ff;
+  color: var(--rosa);
   font-family: "MuseoModerno", cursive;
 }
 
@@ -105,37 +114,37 @@ nav {
   font-size: 1.5em;
   line-height: 1.5;
   margin-bottom: 30px;
-  color: #fff;
+  color: var(--branco);
   font-family: "Nunito Sans", sans-serif;
 }
 
 .home-content button {
-  background-color: #df71ff;
-  color: #000;
+  background-color: var(--rosa);
+  color: var(--preto);
   font-family: "Nunito Sans", sans-serif;
   border: none;
-  border-radius: 40px;
+  border-radius: 10px;
   padding: 10px 30px;
   font-size: 1.5em;
   cursor: pointer;
 }
 
 .home-content button:hover {
-  color: #fff;
+  color: var(--branco);
 }
 
 /* Galeria */
 h2 {
   font-family: "MuseoModerno", cursive;
   font-size: 60px;
-  color: #df71ff;
+  color: var(--rosa);
   text-align: center;
   padding-bottom: 40px;
 }
 
 #gallery {
   padding: 30px 0;
-  background-color: #000;
+  background-color: var(--preto);
 }
 
 .gallery-container {
@@ -147,7 +156,7 @@ h2 {
 .gallery-item {
   width: 20%;
   margin-bottom: 30px;
-  border: solid 4px #df71ff;
+  border: solid 4px var(--rosa);
   border-radius: 10px;
   text-align: center;
 }
@@ -156,7 +165,7 @@ h2 {
   font-family: "Nunito Sans", sans-serif;
   font-weight: bold;
   padding: 10px;
-  color: #fff;
+  color: var(--branco);
 }
 
 .gallery-item img {
@@ -166,7 +175,7 @@ h2 {
 
 .previousWorks{
   padding: 3%;
-  background-color: #000000;
+  background-color: var(--preto);
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23343541' fill-opacity='0.74' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
 }
 
@@ -180,13 +189,13 @@ h2 {
 
 .previous-works-pics img{
   width: 300px;
-  border: solid 4px #df71ff;
+  border: solid 4px var(--rosa);
   border-radius: 10px;
 }
 
 /* Sobre o Estúdio */
 #about {
-  background-color: #000;
+  background-color: var(--preto);
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -201,8 +210,8 @@ h2 {
 
 .studio-pic {
   width: 500px;
-  border: solid 4px #df71ff;
-  border-radius: 10px;;
+  border: solid 4px var(--rosa);
+  border-radius: 10px;
 }
 
 .studio-localization {
@@ -225,7 +234,7 @@ h2 {
 
 .studio-localization p{
   font-family: "Nunito Sans", sans-serif;
-  color: #df71ff;
+  color: var(--rosa);
   padding: 3%;
   font-size: 22px;
 }
@@ -237,7 +246,7 @@ h2 {
 .institutional-text{
   padding: 3%;
   font-size: 22px;
-  color: #df71ff;
+  color: var(--rosa);
   font-family: "Nunito Sans", sans-serif;
 }
 
@@ -252,7 +261,7 @@ h2 {
 
 .institutional-media p {
   font-size: 1.2em;
-  color: #df71ff;
+  color: var(--rosa);
   font-family: "Nunito Sans", sans-serif;
   margin-bottom: 30px;
 }
@@ -264,6 +273,8 @@ h2 {
 .institutional-media iframe {
   width: 100%;
   margin-bottom: 30px;
+  border: solid 4px var(--rosa);
+  border-radius: 10px;
 }
 
 .artist-description{
@@ -275,16 +286,19 @@ table {
 	max-width: 600px;
 	margin: 0 auto;
 	font-size: 14px;
-  color: #fff;
+  color: var(--branco);
   font-family: "Nunito Sans", sans-serif;
 }
+
 th, td {
-	border: 1px solid #df71ff;
+	border: 1px solid var(--lilas);
+  border-radius: 10px;
 	padding: 8px;
 	text-align: center;
 }
+
 th {
-	background-color: #df71ff;
+	background-color: var(--lilas);
 	font-weight: bold;
   font-size: 20px;
 }
@@ -293,7 +307,7 @@ th {
 #contact {
   padding: 1%;
   padding-bottom: 3%;
-  background-color: #000000;
+  background-color: var(--preto);
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='24' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%23343541' fill-opacity='0.4'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   text-align: center;
 }
@@ -317,7 +331,7 @@ th {
   margin-bottom: 20px;
   font-size: 22px;
   font-weight: bold;
-  color: #fff;
+  color: var(--branco);
   font-family: "Nunito Sans", sans-serif;
 }
 
@@ -326,25 +340,25 @@ th {
   max-width: 400px;
   padding: 10px;
   font-size: 16px;
-  border-radius: 5px;
+  border-radius: 10px;
   margin-bottom: 10px;
 }
 
 .contact-form button[type="submit"] {
-  background-color: #df71ff;
-  color: white;
+  background-color: var(--rosa);
+  color: var(--branco);
   font-family: "Nunito Sans", sans-serif;
   border: none;
   padding: 10px 20px;
   font-size: 16px;
-  border-radius: 5px;
+  border-radius: 10px;
   cursor: pointer;
 }
 
 #contact p{
 font-size: 22px;
 font-weight: bold;
-color: #df71ff;
+color: var(--rosa);
 font-family: "Nunito Sans", sans-serif;
 }
 
@@ -361,7 +375,7 @@ font-family: "Nunito Sans", sans-serif;
 }
 
 .contact-whats h3 {
-  color: white;
+  color: var(--rosa_claro);
   font-family: "Nunito Sans", sans-serif;
   padding-bottom: 10px;
 }
@@ -375,7 +389,7 @@ font-family: "Nunito Sans", sans-serif;
 
 /* Estilos para o rodapé */
 footer {
-  background-color: #df71ff;
+  background-color: var(--lilas);
   text-align: center;
   padding: 10px;
 }
@@ -383,6 +397,6 @@ footer {
 footer p {
   margin: 0;
   font-size: 20px;
-  color: white;
+  color: var(--branco);
   font-family: "Nunito Sans", sans-serif;
 }
