--- a/Trilha 2/PowerInk/style.css
+++ b/Trilha 2/PowerInk/style.css
@@ -54,28 +54,25 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 100px;
-  height: 200px;
+  gap: 8em;
+  height: 30vh;
   max-width: 100%;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 2em;
 }
 
 .logo img {
-  height: 140px;
+  height: 22vh;
 }
 
 .menu {
   display: flex;
   flex-direction: row;
-  margin: 0;
-  padding: 0;
 }
 
 .menu li {
   display: flex;
-  margin-right: 15px;
-  margin-left: 15px;
+  padding: 0.5em;
   flex-direction: column;
   align-items: center;
   position: relative;
@@ -87,9 +84,9 @@ nav {
   text-decoration: none;
   font-size: 1.5em;
   font-weight: 500;
-  padding: 0 10px;
+  padding: 0 0.5em;
   font-family: var(--fonte_titulos);
-  transform: translate(0px, 40px);
+  transform: translate(0, 165%);
 }
 
 .menu a:hover {
@@ -99,12 +96,12 @@ nav {
 .submenu {
   display: none;
   position: absolute;
-  top: 70px;
+  top: 60%;
   left: 0;
   z-index: 1;
   background-color: var(--preto);
   opacity: 0.9;
-  padding: 15px;
+  padding: 1em;
 }
 
 .menu li:hover .submenu {
@@ -118,13 +115,12 @@ nav {
   font-size: 1em;
   font-weight: 500;
   font-family: var(--fonte_titulos);
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 0.5em 0;
 }
 
 .menu li:hover .submenu a {
   display: block;  
-  transform: translate(0px, 0px);
+  transform: translate(0, 15%);
 }
 
 .submenu li a:hover {
@@ -141,12 +137,12 @@ nav {
 
 .home-content {
   text-align: center;
-  max-width: 600px;
+  max-width: 50%;
 }
 
 .home-content h1 {
   font-size: 7em;
-  margin-bottom: 20px;
+  margin-bottom: 0.5em;
   color: var(--rosa);
   font-family: var(--fonte_titulos);
 }
@@ -154,7 +150,7 @@ nav {
 .home-content p {
   font-size: 1.5em;
   line-height: 1.5;
-  margin-bottom: 30px;
+  margin-bottom: 0.7em;
   color: var(--branco);
   font-family: var(--fonte_padrao);
 }
@@ -164,54 +160,57 @@ nav {
   color: var(--preto);
   font-family: var(--fonte_padrao);
   border: none;
-  border-radius: 10px;
-  padding: 10px 30px;
+  border-radius: 1em;
+  padding: 1% 3%;
   font-size: 1.5em;
   cursor: pointer;
 }
 
 .home-content button:hover {
   color: var(--branco);
+  transform: scale(1.1);
 }
 
 /* Galeria */
 h2 {
   font-family: var(--fonte_titulos);
-  font-size: 60px;
+  font-size: 3.5em;
   color: var(--rosa);
   text-align: center;
-  padding-bottom: 40px;
+  padding-bottom: 0.8em;
 }
 
 #gallery {
-  padding: 30px 0;
+  padding: 3%;
   background-color: var(--preto);
 }
 
 .gallery-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  margin: 0 3em;
 }
 
 .gallery-item {
   width: 20%;
-  margin-bottom: 30px;
-  border: solid 4px var(--rosa);
-  border-radius: 10px;
+  margin-bottom: 1.5em;
+  border: solid 0.4em var(--rosa);
+  border-radius: 0.6em;
   text-align: center;
 }
 
 .gallery-item figcaption {
   font-family: var(--fonte_padrao);
   font-weight: bold;
-  padding: 10px;
+  padding: 0.8em;
+  font-size: 0.8em;
   color: var(--branco);
 }
 
 .gallery-item img {
   width: 100%;
-  height: 400px;
+  height: 90%;
 }
 
 .previousWorks{
@@ -225,13 +224,13 @@ h2 {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 30px;
+  gap: 1.2em;
  }
 
 .previous-works-pics img{
-  width: 300px;
-  border: solid 4px var(--rosa);
-  border-radius: 10px;
+  width: 25%;
+  border: solid 0.4em var(--rosa);
+  border-radius: 1em;
 }
 
 /* Sobre o Estúdio */
@@ -240,53 +239,63 @@ h2 {
   text-align: center;
   display: flex;
   flex-direction: column;
-  padding: 2%;
+  padding: 3%;
 }
 
-.studio-pics{
+.studio-pics {
   display: flex;
   justify-content: center;
-  gap: 30px;
+  gap: 3em;
+}
+
+.cards {
+  display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
+ width: 34%;
+ gap: 1em;
+ background-color: var(--branco);
+ padding: 2%;
+ border-radius: 1em;
+ border: solid 0.4em var(--lilas);
+ box-shadow: 1% 1% 1% rgba(58, 6, 36, 0.6);
+
+}
+
+.cards:hover{
+  transform: scale(1.1);
 }
 
 .studio-pic {
-  width: 500px;
-  border: solid 4px var(--rosa);
-  border-radius: 10px;
+  width: 100%;
+  border-radius: 1em;
+}
+
+.cards h3 {
+  font-size: 2em;
+  color: var(--lilas);
+  font-family: var(--fonte_titulos);
+  padding: 0.3em;
+}
+
+.cards p {
+  font-family: var(--fonte_padrao);
+  color: var(--lilas);
+  font-size: 1.2em;
+  width: 98%;
 }
 
 .studio-localization {
   display: flex;
   flex-direction: column;
   width: 80%;
-  padding-left: 10%;
-  padding-right: 10%;
-  padding-bottom: 5%;
-}
-
-.tabela-horarios {
-  display: flex;
-  flex-direction: column;
-  width: 80%;
-  padding-left: 10%;
-  padding-right: 10%;
-  padding-bottom: 5%;
-}
-
-.studio-localization p{
-  font-family: var(--fonte_padrao);
-  color: var(--rosa);
-  padding: 3%;
-  font-size: 22px;
-}
-
-.localization{
-  height: 50vh;
+  padding: 0% 10% 5% 10%;
 }
 
 .institutional-text{
   padding: 3%;
-  font-size: 22px;
+  font-size: 1.4em;
   color: var(--rosa);
   font-family: var(--fonte_padrao);
 }
@@ -295,16 +304,16 @@ h2 {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 30px;
+  gap: 3em;
   padding: 2%;
-  padding-bottom: 1%;
+  margin: 0 2em;
 }
 
 .institutional-media p {
   font-size: 1.2em;
-  color: var(--rosa);
+  color: var(--rosa_claro);
   font-family: var(--fonte_padrao);
-  margin-bottom: 30px;
+  margin-bottom: 2em;
 }
 
 .institutional-video{
@@ -313,42 +322,64 @@ h2 {
 
 .institutional-media iframe {
   width: 100%;
-  margin-bottom: 30px;
-  border: solid 4px var(--rosa);
-  border-radius: 10px;
+  margin-bottom: 2em;
+  border: solid 0.4em var(--rosa);
+  border-radius: 1em;
+  box-shadow: 1% 1% 1% rgba(58, 6, 36, 0.6);
 }
 
 .artist-description{
-  width: 50%;
+  width: 40%;
+}
+
+.img-tatuadora{
+  width: 300px;
+}
+
+.tabela-horarios {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  padding: 0% 10% 5% 10%;
 }
 
 table {
 	width: 100%;
-	max-width: 600px;
+	max-width: 75%;
 	margin: 0 auto;
-	font-size: 14px;
+	font-size: 1em;
   color: var(--branco);
   font-family: var(--fonte_padrao);
 }
 
 th, td {
-	border: 1px solid var(--lilas);
-  border-radius: 10px;
-	padding: 8px;
+	border: 0.2em solid var(--lilas);
+  border-radius: 0.8em;
+	padding: 0.6em;
 	text-align: center;
 }
 
 th {
 	background-color: var(--lilas);
 	font-weight: bold;
-  font-size: 18px;
+  font-size: 1.2em;
   font-family: var(--fonte_titulos);
+}
+
+.studio-localization p{
+  font-family: var(--fonte_padrao);
+  color: var(--rosa);
+  padding: 3%;
+  font-size: 1.4em;
+}
+
+.localization{
+  height: 50vh;
 }
 
 /*Seção "Contato" */
 #contact {
-  padding: 1%;
-  padding-bottom: 3%;
+  padding: 3%;
   background-color: var(--preto);
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='24' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%23343541' fill-opacity='0.4'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   text-align: center;
@@ -361,17 +392,17 @@ th {
 }
 
 .contact-container img{
-  width: 300px;
+  width: 75%;
 }
 
 .contact-form {
-  margin-bottom: 80px;
+  margin-bottom: 8%;
 }
 
 .contact-form label {
   display: block;
-  margin-bottom: 20px;
-  font-size: 22px;
+  margin-bottom: 1em;
+  font-size: 1.4em;
   font-weight: bold;
   color: var(--branco);
   font-family: var(--fonte_padrao);
@@ -379,11 +410,11 @@ th {
 
 .contact-form input[type="email"] {
   width: 100%;
-  max-width: 400px;
-  padding: 10px;
-  font-size: 16px;
-  border-radius: 10px;
-  margin-bottom: 10px;
+  max-width: 60%;
+  padding: 1.5%;
+  font-size: 1.1em;
+  border-radius: 0.8em;
+  margin-bottom: 1em;
 }
 
 .contact-form button[type="submit"] {
@@ -391,16 +422,16 @@ th {
   color: var(--branco);
   font-family: var(--fonte_padrao);
   border: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  border-radius: 10px;
+  padding: 2%;
+  font-size: 1em;
+  border-radius: 0.8em;
   cursor: pointer;
 }
 
-#contact p{
-font-size: 22px;
+#contact p {
+font-size: 1.6em;
 font-weight: bold;
-color: var(--rosa);
+color: var(--rosa_claro);
 font-family: var(--fonte_padrao);
 }
 
@@ -421,12 +452,12 @@ font-family: var(--fonte_padrao);
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 66px;
+  width: 75%;
   transition: width 1s;
 }
 
 .contact-whats a img:hover{
-  width: 80px;
+   transform: scale(1.1);
 }
 
 
@@ -434,12 +465,160 @@ font-family: var(--fonte_padrao);
 footer {
   background-color: var(--lilas);
   text-align: center;
-  padding: 10px;
+  padding: 1%;
 }
 
 footer p {
-  margin: 0;
-  font-size: 20px;
+  font-size: 1em;
   color: var(--branco);
   font-family: var(--fonte_padrao);
 }
+
+
+
+/* Responsividade */
+
+
+@media only screen and (max-width: 768px){
+  
+
+  .contact-whats{
+    display: none;
+    
+  }
+
+  svg{
+    display: none;
+  }
+
+  
+  .logo img {
+    height: 15vh;
+    
+  }
+
+  nav {
+    gap: 0;
+    height: 20vh;
+    padding: 0;
+  }
+
+  .menu a{
+    font-size: 1em;
+  transform: translate(0, 0%);
+  }
+
+  .home-content h1{
+    font-size: 5em;
+  }
+
+  .home-content p{
+    font-size: 1em;
+  }
+
+
+  .home-content button{
+    font-size: 1em;    
+  }
+
+  .header-container { 
+    height: 85vh;
+  }
+
+  .gallery-item{
+    width: 40%;
+  }
+
+  h2{
+    font-size: 2.5em;
+  }
+
+  .cards p{
+    font-size: 1em;
+  }
+
+  .institutional-text, .institutional-media p{
+    font-size: 0.9em;
+  }
+
+  #contact p{
+    font-size: 1em;
+  }
+
+  .img-tatuadora{
+    width: 250px;
+  }
+  
+
+
+}
+
+
+@media only screen and (max-width: 480px){
+
+  .menu{
+    flex-direction: column;
+    align-items: left;
+  }
+
+  .menu li:hover .submenu a {
+    display: none;
+  }
+
+  .menu li:hover .submenu {
+    display: none;
+  }
+
+  .header-container{
+    height: 100vh;
+  }
+  header {
+    background-image: linear-gradient(to bottom, var(--preto) 80%, #34354112);
+    width: 100%;
+  }
+
+  nav{
+    height: 50vh;
+    font-size: 1.2em;
+  }
+  
+  .img-tatuadora{
+    width: 150px;
+  }
+
+  .logo img{
+    height: 20vh;
+  }
+
+  .home-content h1 {
+    font-size: 3em;
+  }
+
+  .gallery-item {
+    width: 100%;
+  }
+
+  .previous-works-pics img{
+    width: 100%;
+  }
+
+  .cards, .institutional-video, .artist-description{
+    width: 100%;
+  }
+
+  .studio-pics, .institutional-media{
+    flex-wrap: wrap;
+  }
+
+  .studio-localization p, .contact-form label {
+    font-size: 1em;
+  }
+
+  .gallery-item figcaption{
+    font-size: 1em;
+  }
+  .contact-whats{
+    display: none;
+  }
+}
+
