--- a/Trilha 2/PowerInk/style.css
+++ b/Trilha 2/PowerInk/style.css
@@ -213,25 +213,67 @@ h2 {
   height: 90%;
 }
 
-.previousWorks{
+/* Trabalhos prontos*/
+.previousWorks {
   padding: 3%;
   background-color: var(--preto);
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23343541' fill-opacity='0.74' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='24' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%23343541' fill-opacity='0.4'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  }
+
+.previous-works-pics {
+  width: 600px;
+  height: 450px;
+  overflow: hidden;
+  position: relative;
+  margin: 0 auto;
 }
 
-.previous-works-pics{
+.previous-works-pics-wrapper {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 1.2em;
- }
+  width: calc(100% * 6);
+  position: absolute;
+  top: 0;
+  left: 0;
+  animation: slide 10s linear infinite;
+}
 
-.previous-works-pics img{
-  width: 25%;
+.previous-works-pics-wrapper img {
+  width: 600px;
+  height: 400px;
   border: solid 0.4em var(--rosa);
   border-radius: 1em;
 }
+
+@keyframes slide {
+  0% {
+    left: 0%;
+  }
+  20% {
+    left: 0%;
+  }
+  25% {
+    left: -100%;
+  }
+  45% {
+    left: -100%;
+  }
+  50% {
+    left: -200%;
+  }
+  70% {
+    left: -200%;
+  }
+  75% {
+    left: -300%;
+  }
+  95% {
+    left: -300%;
+  }
+  100% {
+    left: 0%;
+  }
+}
+
 
 /* Sobre o Estúdio */
 #about {
@@ -263,7 +305,7 @@ h2 {
 
 }
 
-.cards:hover{
+.cards:hover {
   transform: scale(1.1);
 }
 
@@ -293,7 +335,7 @@ h2 {
   padding: 0% 10% 5% 10%;
 }
 
-.institutional-text{
+.institutional-text {
   padding: 3%;
   font-size: 1.4em;
   color: var(--rosa);
@@ -316,7 +358,7 @@ h2 {
   margin-bottom: 2em;
 }
 
-.institutional-video{
+.institutional-video {
   width: 50%;
 }
 
@@ -328,11 +370,11 @@ h2 {
   box-shadow: 1% 1% 1% rgba(58, 6, 36, 0.6);
 }
 
-.artist-description{
+.artist-description {
   width: 40%;
 }
 
-.img-tatuadora{
+.img-tatuadora{ 
   width: 300px;
 }
 
@@ -366,14 +408,14 @@ th {
   font-family: var(--fonte_titulos);
 }
 
-.studio-localization p{
+.studio-localization p {
   font-family: var(--fonte_padrao);
   color: var(--rosa);
   padding: 3%;
   font-size: 1.4em;
 }
 
-.localization{
+.localization {
   height: 50vh;
 }
 
@@ -381,11 +423,11 @@ th {
 #contact {
   padding: 3%;
   background-color: var(--preto);
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='24' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%23343541' fill-opacity='0.4'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='20' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%23343541' fill-opacity='0.25'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   text-align: center;
 }
 
-.contact-container{
+.contact-container {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -441,7 +483,7 @@ font-family: var(--fonte_padrao);
   left: 92vw;
 }
 
-.contact-whats-container{
+.contact-whats-container {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -456,7 +498,7 @@ font-family: var(--fonte_padrao);
   transition: width 1s;
 }
 
-.contact-whats a img:hover{
+.contact-whats a img:hover {
    transform: scale(1.1);
 }
 
@@ -474,27 +516,15 @@ footer p {
   font-family: var(--fonte_padrao);
 }
 
-
-
 /* Responsividade */
-
-
+/* tablets*/
 @media only screen and (max-width: 768px){
-  
-
-  .contact-whats{
-    display: none;
-    
-  }
-
-  svg{
+  .contact-whats, svg {
     display: none;
   }
-
   
   .logo img {
     height: 15vh;
-    
   }
 
   nav {
@@ -503,22 +533,17 @@ footer p {
     padding: 0;
   }
 
-  .menu a{
+  .menu a {
     font-size: 1em;
-  transform: translate(0, 0%);
+    transform: translate(0, 0%);
   }
 
-  .home-content h1{
+  .home-content h1 {
     font-size: 5em;
   }
 
-  .home-content p{
+  .home-content p, .home-content button, .cards p, #contact p {
     font-size: 1em;
-  }
-
-
-  .home-content button{
-    font-size: 1em;    
   }
 
   .header-container { 
@@ -529,96 +554,65 @@ footer p {
     width: 40%;
   }
 
-  h2{
+  h2 {
     font-size: 2.5em;
-  }
-
-  .cards p{
-    font-size: 1em;
   }
 
   .institutional-text, .institutional-media p{
     font-size: 0.9em;
   }
 
-  #contact p{
-    font-size: 1em;
-  }
-
   .img-tatuadora{
     width: 250px;
   }
-  
-
-
 }
 
-
+/* celulares*/
 @media only screen and (max-width: 480px){
-
-  .menu{
-    flex-direction: column;
-    align-items: left;
-  }
-
-  .menu li:hover .submenu a {
+  .contact-whats, .menu li:hover .submenu, .menu li:hover .submenu a {
     display: none;
   }
 
-  .menu li:hover .submenu {
-    display: none;
-  }
-
-  .header-container{
-    height: 100vh;
-  }
   header {
     background-image: linear-gradient(to bottom, var(--preto) 80%, #34354112);
     width: 100%;
   }
 
-  nav{
+  .header-container {
+    height: 100vh;
+  }
+
+  nav {
     height: 50vh;
     font-size: 1.2em;
   }
   
-  .img-tatuadora{
-    width: 150px;
+  .menu {
+    flex-direction: column;
+    align-items: left;
   }
 
-  .logo img{
+  .logo img {
     height: 20vh;
   }
 
   .home-content h1 {
     font-size: 3em;
   }
-
-  .gallery-item {
+  
+  .gallery-item, .previous-works-pics img, .cards, .institutional-video, .artist-description {
     width: 100%;
   }
 
-  .previous-works-pics img{
-    width: 100%;
-  }
-
-  .cards, .institutional-video, .artist-description{
-    width: 100%;
-  }
-
-  .studio-pics, .institutional-media{
+  .studio-pics, .institutional-media {
     flex-wrap: wrap;
   }
 
-  .studio-localization p, .contact-form label {
+  .gallery-item figcaption, .studio-localization p, .contact-form label {
     font-size: 1em;
   }
 
-  .gallery-item figcaption{
-    font-size: 1em;
-  }
-  .contact-whats{
-    display: none;
+  .img-tatuadora {
+    width: 250px;
   }
 }
-
